--- a/views/qlnhanvien.hbs
+++ b/views/qlnhanvien.hbs
@@ -185,7 +185,7 @@
 
             <!-- 404 Start -->
            <div class="row">
-            <h1 style="text-align: center; margin-top: 50px; ">Thông Tin Hàng Nhập Kho</h1>
+            <h1 style="text-align: center; margin-top: 50px; ">Thông Tin danh sách nhân viên</h1>
         <div class="col-lg-5 col-md-7 col-sm-9 col-11 mx-auto">
             
 
