--- a/views/qldoanhthu.hbs
+++ b/views/qldoanhthu.hbs
@@ -71,22 +71,14 @@
                             <a href="element.html" class="dropdown-item">Other Elements</a>
                         </div>
                     </div> --}}
-                    <a href="/kho" class="nav-item nav-link active"><i class="fa fa-th me-2"></i>Kho Hàng</a>
-                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
-                    <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-item nav-link" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="signin.html" class="dropdown-item">Sign In</a>
-                            <a href="signup.html" class="dropdown-item">Sign Up</a>
-                           
-                            <a href="blank.html" class="dropdown-item">Blank Page</a>
-                        </div>
+                    <a href="/kho" class="nav-item nav-link "><i class="fa fa-th me-2"></i>Kho Hàng</a>
+                    <a href="/themnhanvien" class="nav-item nav-link "><i class="fa fa-keyboard me-2"></i>Quản lý nhân viên</a>
+                    <a href="/themmenu" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Quản lý Menu</a>
+                    <a href="/doanhthu1" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Quản lý doanh thu</a>
+                    
                     </div>
-                </div>
-            </nav>
-        </div>
+                    </nav>
+                    </div>
         <!-- Sidebar End -->
 
 
@@ -180,47 +172,25 @@
                     </div>
                 </div>
             </nav>
+
+            
             <!-- Navbar End -->
 
 
             <!-- 404 Start -->
-           <div class="row">
-            <h1 style="text-align: center; margin-top: 50px; ">Thông Tin Hàng Nhập Kho</h1>
-        <div class="col-lg-5 col-md-7 col-sm-9 col-11 mx-auto">
-            
-
-          <div class="grid">
-            <div class="grid-body">
-              <div class="row">
-                <div class="col-lg-15 col-md-15 col-sm-15 col-15 mx-auto form-wrapper">
-                <div class="form-container">
+        <div class="row">
+            <h1 style="text-align: center; margin-top: 50px; ">Quản lý doanh thu</h1>
+            <div class="col-lg-5 col-md-7 col-sm-9 col-11 mx-auto">
+        
+        
+                
+        
+                                        <div style="display: flex; justify-content: space-between;">
+                                            
+                                            <a href="/doanhthu" class="btn btn-primary" style="flex: 1;">Xem</a>
+                                        </div>
+                     
                     
-                  <form action="/auth/kho" method="POST" style="margin-top: 20px;">
-                    <div class="form-group input-rounded">
-                      <input type="text" class="form-control" placeholder="Mã hàng hóa " id="email" name="maHH" style=" margin-bottom: 5px; padding: 10px; top: 10px;"/>
-                    </div>
-                    <div class="form-group input-rounded">
-                      <input type="text" class="form-control" placeholder="Mã nhà cung cấp" id="MaNcc" name="maNcc" style=" margin-bottom: 5px; padding: 10px;"/>
-                    </div>
-                    <div class="form-group input-rounded">
-                      <input type="text" class="form-control" placeholder="Mã loại hàng" id="MaLh" name="maLh" style=" margin-bottom: 5px;  padding: 10px;"/>
-                    </div>
-                    <div class="form-group input-rounded">
-                      <input type="text" class="form-control" placeholder="Tên hàng hóa" id="TenHh" name="tenHh" style=" margin-bottom: 5px;  padding: 10px;"/>
-                    </div> 
-                    <div class="form-group input-rounded">
-                      <input type="text" class="form-control" placeholder="Giá sản phẩm" id="GiaSp" name="giaSp" style=" margin-bottom: 5px;  padding: 10px;"/>
-                    </div>
-                    <div class="form-group input-rounded">
-                      <input type="text" class="form-control" placeholder="Ghi chú" id="Ghichu" name="ghichu" style=" margin-bottom: 5px;  padding: 10px;"/>
-                    </div>
-                    <div class="form-group input-rounded">
-                      <input type="text" class="form-control" placeholder="Số lượng" id="Soluong" name="soluong" style=" margin-bottom: 5px;  padding: 10px;"/>
-                    </div> 
-                    <div style="display: flex; justify-content: space-between;">
-    <button type="submit" class="btn btn-primary" style="flex: 1; margin-right: 10px;"> Thêm </button>
-    <a href="/hienkho" class="btn btn-primary" style="flex: 1;">Kho</a>
-</div>
 
 
                     
