--- a/views/doanhthu.hbs
+++ b/views/doanhthu.hbs
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    <a href="/trangchu" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Quản Lý</a>
+                    <a href="/auth/login" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Quản Lý</a>
                     {{!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
                                 class="fa fa-laptop me-2"></i>Elements</a>
@@ -111,16 +111,7 @@
                         Menu</a>
                     <a href="/doanhthu1" class="nav-item nav-link active "><i class="fa fa-chart-bar me-2"></i>Quản lý doanh
                         thu</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
-                                class="far fa-file-alt me-2"></i>Pages</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="signin.html" class="dropdown-item">Sign In</a>
-                            <a href="signup.html" class="dropdown-item">Sign Up</a>
-                            <a href="404.html" class="dropdown-item">404 Error</a>
-                            <a href="blank.html" class="dropdown-item">Blank Page</a>
-                        </div>
-                    </div>
+                    
                 </div>
             </nav>
         </div>
@@ -237,7 +228,7 @@
                         <tr>
                             <td>{{this.MaOder}}</td>
                             <td>{{this.Ngay}}</td>
-                            <td>{{this.Tongtien}}</td>
+                            <td>{{this.TongTien}}</td>
                         </tr>
                         {{/each}}
                     </tbody>
