--- a/views/trangchu.hbs
+++ b/views/trangchu.hbs
@@ -111,15 +111,10 @@
                     <a href="/themnhanvien" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Quản lý nhân
                         viên</a>
                     <a href="/themmenu" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Quản lý Menu</a>
-                    <a href="qldoanhthu.hbs" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Quản lý doanh thu</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="/login" class="dropdown-item">Sign In</a>
-                            <a href="signup.html" class="dropdown-item">Sign Up</a>
-                            <a href="blank.html" class="dropdown-item">Blank Page</a>
-                        </div>
-                    </div>
+                    <a href="/doanhthu1" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Quản lý doanh thu</a>
+                    <a href="/nhacungcap" class="nav-item nav-link"><i class="fas fa-store me-2"></i>Nhà cung cấp</a>
+                    <a href="/loaihang" class="nav-item nav-link"><i class="fas fa-tags me-2"></i>Loại hàng</a>
+                    
                 </div>
             </nav>
         </div>
@@ -332,7 +327,7 @@
                         <tr>
                             <td>{{this.MaOder}}</td>
                             <td>{{this.Ngay}}</td>
-                            <td>{{this.Tongtien}}</td>
+                            <td>{{this.TongTien}}</td>
                         </tr>
                         {{/each}}
                     </tbody>
