--- a/views/kho.hbs
+++ b/views/kho.hbs
@@ -37,11 +37,11 @@
 <body>
     <div class="container-xxl position-relative bg-white d-flex p-0">
         <!-- Spinner Start -->
-        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        {{!-- <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
-        </div>
+        </div> --}}
         <!-- Spinner End -->
 
 
@@ -66,9 +66,8 @@
                     <a href="/kho" class="nav-item nav-link active"><i class="fa fa-th me-2"></i>Kho Hàng</a>
                     <a href="/themnhanvien" class="nav-item nav-link  "><i class="fa fa-keyboard me-2"></i>Quản lý nhân viên</a>
                     <a href="/themmenu" class="nav-item nav-link "><i class="fa fa-table me-2"></i>Quản lý Menu</a>
-                    <a href="qldoanhthu.hbs" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Quản lý doanh thu</a>
-                    <a href="/nhacungcap" class="nav-item nav-link"><i class="fas fa-store me-2"></i>Nhà cung cấp</a>
-                    <a href="/loaihang" class="nav-item nav-link"><i class="fas fa-tags me-2"></i>Loại hàng</a>
+                    <a href="/doanhthu1" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Quản lý doanh thu</a>
+                   
                 </div>
             </nav>
         </div>
