--- a/views/qlnhanvien.hbs
+++ b/views/qlnhanvien.hbs
@@ -185,7 +185,7 @@
 
             <!-- 404 Start -->
            <div class="row">
-            <h1 style="text-align: center; margin-top: 50px; ">Thông Tin Hàng Nhập Kho</h1>
+            <h1 style="text-align: center; margin-top: 50px; ">Thêm Nhân Viên</h1>
         <div class="col-lg-5 col-md-7 col-sm-9 col-11 mx-auto">
             
 
@@ -224,15 +224,9 @@
                     <div style="display: flex; justify-content: space-between;">
     <button type="submit" class="btn btn-primary" style="flex: 1; margin-right: 10px;"> Thêm </button>
     <a href="/hiennhanvien" class="btn btn-primary" style="flex: 1;">Danh sách nhân viên</a>
-</div>
-
-
-                    
-                    
+</div>                   
                   </form> 
-                  
-
-                
+                  </form>   
                   {{#if message}}
                     <h4 class="alert alert-danger mt-4">{{message}}</h4>
                   {{/if}}
